--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>Order System</title>
         <meta charset="utf-8">
 
-        <link data-trunk rel="rust" />
-        <link data-trunk rel="css" href="style.css" />
+        <link data-trunk rel="rust"/>
+        <link data-trunk rel="css" href="style.css"/>
+        <link data-trunk rel="copy-dir" href="assets"/>
     </head>
 
     <body></body>
